--- a/app/assets/stylesheets/variables/_colors.scss
+++ b/app/assets/stylesheets/variables/_colors.scss
@@ -1,5 +1,5 @@
 // Use http://bit.ly/1KCISUE for naming colors
 $gallery: #EDEDED;
-$fountain_blue: #5BC5BF;
+$fountain_blue: #51AFAA;
 $tundora: #404040;
 $silver: #B9B9B9;
