--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,5 @@
     = stylesheet_link_tag    'application', media: 'all'
     = csrf_meta_tags
   %body
+    = render 'shared/header'
     = yield
