Article 'show' page

--- a/app/assets/stylesheets/abstractions/_mixins.scss
+++ b/app/assets/stylesheets/abstractions/_mixins.scss
@@ -13,3 +13,9 @@
   -o-transition: $args;
   transition: $args;
 }
+
+@mixin _border-radius($radius) {
+  -webkit-border-radius: $radius;
+  border-radius: $radius;
+  background-clip: padding-box;
+}
