--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,6 +10,7 @@
 
 // Articles
 @import './components/articles/index';
+@import './components/articles/show';
 
 // Shared
 @import './shared/pagination';
