Created 'about' page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,6 +11,7 @@
 // Articles
 @import './components/articles/index';
 @import './components/articles/show';
+@import './components/static_pages/about';
 
 // Shared
 @import './shared/pagination';
