--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,6 +2,6 @@
   %nav.header-navigation
     %ul.header-navigation__list
       %li.header-navigation__item
-        %a.header-navigation__item-link{:href => "#{articles_path}"} Home
+        = link_to 'Home', { controller: 'articles', action: 'index' }, { class: 'header-navigation__item-link' }
       %li.header-navigation__item
-        %a.header-navigation__item-link{:href => '#'} About
+        = link_to 'About', { controller: 'static_pages', action: 'about' }, { class: 'header-navigation__item-link' }
