--- a/app/assets/stylesheets/shared/_pagination.scss
+++ b/app/assets/stylesheets/shared/_pagination.scss
@@ -1,8 +1,8 @@
 .pagination {
   display: block;
   max-width: 768px;
-  margin: 0px auto;
-  padding: 0px 15px;
+  margin: 0px auto 60px auto;
+  padding: 0px;
 }
 
 .pagination > li > a {
