--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,4 @@
-%div.container.article-index
+%div.article-index
   - if @articles.blank?
     %div.row.row-centered
       %h2.col-xs-12.col-centered.article-index__empty There are no articles to show.
