--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,9 @@
 
     = render 'shared/header'
 
-    = yield
+    %div.container
+      = yield
+
+    = render 'shared/footer'
 
     %script{:src => "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57893a47237d8f8e", :type => "text/javascript"}
