--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -3,7 +3,7 @@ html, body {
   font-weight: normal;
   width: 100%;
   height: 100%;
-  min-width: 320px;
+  min-width: $app_min_width;
   min-height: 100%;
   margin-bottom: 50px;
 }
