--- a/app/assets/stylesheets/components/articles/_index.scss
+++ b/app/assets/stylesheets/components/articles/_index.scss
@@ -1,5 +1,5 @@
 .article-index__list {
-  max-width: 768px;
+  max-width: $app_max_width;
   margin: 0px auto;
   text-align: center;
   padding: 0px;
@@ -9,7 +9,7 @@
 .article-index__item {
   margin-bottom: 20px;
   border-bottom: 2px solid $gallery;
-  max-width: 768px;
+  max-width: $app_max_width;
   padding: 0px;
 
   &:last-child {
@@ -19,7 +19,7 @@
 }
 
 .article-index__empty {
-  max-width: 768px;
+  max-width: $app_max_width;
   color: $tundora;
   font-weight: bold;
 }
