--- a/app/assets/stylesheets/shared/_footer.scss
+++ b/app/assets/stylesheets/shared/_footer.scss
@@ -12,8 +12,8 @@
   margin: 0px auto;
   padding: 0px;
   list-style: none;
-  min-width: 320px;
-  max-width: 768px;
+  min-width: $app_min_width;
+  max-width: $app_max_width;
   background: $fountain_blue;
   text-align: right;
 }
