Read channel videos

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -4,7 +4,7 @@
       %h1.about-content__title About
       %p.about-content__body
         %span.about-content__site-name Guitarly.co
-        is a weekly blog for guitar players. The main goal of
+        is a blog for guitar players. The main goal of
         %span.about-content__site-name Guitarly.co
         is to help guitar players all around the world to find awesome resources to become better musicians. Want to get in contact with us? Send us an email at
         %a.about-content__email-link{:href => "mailto:guitarlyco@gmail.com"} guitarlyco@gmail.com
